--- a/.github/workflows/RM2100-kenzok8.yml
+++ b/.github/workflows/RM2100-kenzok8.yml
@@ -22,7 +22,7 @@ on:
     branches:
       - main
     paths:
-      - 'RM2100.config'        
+      - 'RM2100-kenzok8.config'        
   #schedule:
    # - cron: 0 0 * * 5
   watch:
@@ -32,7 +32,7 @@ env:
   REPO_URL: https://github.com/coolsnowwolf/lede
   REPO_BRANCH: master
   FEEDS_CONF: feeds.conf.default
-  CONFIG_FILE: RM2100.config
+  CONFIG_FILE: RM2100-kenzok8.config
   DIY_P1_SH: diy-part1-kenzok8.sh
   DIY_P2_SH: diy-part2-kenzok8.sh
   UPLOAD_BIN_DIR: false
